# Eva-Tracker

./: README.md  README_cn.md
bag/: goal.bag
src/predictor/: CMakeLists.txt  package.xml
src/predictor/include/predictor/: predictor.hpp
src/predictor/launch/: prediction.launch
src/predictor/src/: prediction.cpp
src/predictor/src/predictor/: predictor.cpp
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/planner/: nav.hpp
src/simulator/include/simulator/: env.hpp  lidar.hpp  map.hpp  robot.hpp
src/simulator/launch/: robot.launch  simulation.launch
src/simulator/rviz/: rviz.rviz
src/simulator/src/: fov.cpp  simulator.cpp  sot.cpp  trajectory.cpp  transform.cpp
src/simulator/src/planner/: nav.cpp
src/simulator/src/simulator/: env.cpp  lidar.cpp  map.cpp  robot.cpp
src/simulator/urdf/: car.xacro  uav.xacro
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/: utils.hpp
src/tracker/include/optimizer/: bspline.hpp  esdf.hpp  optim.hpp
src/tracker/include/searcher/: map.hpp  search.hpp
src/tracker/launch/: camera.launch  tracking.launch
src/tracker/scripts/: camera.py
src/tracker/src/: track.cpp
src/tracker/src/optimizer/: bspline.cpp  esdf.cpp  optim.cpp
src/tracker/src/searcher/: map.cpp  search.cpp
